--- a/skins/moono-lisa/richcombo.css
+++ b/skins/moono-lisa/richcombo.css
@@ -70,7 +70,7 @@ The visual representation of a rich combo widget looks as follows:
 
 .cke_hc .cke_combo:after
 {
-	border-color: #000;
+	border-color: ButtonText;
 }
 
 
@@ -137,7 +137,7 @@ a.cke_combo_button
 .cke_hc .cke_combo_off a.cke_combo_button:focus,
 .cke_hc .cke_combo_off a.cke_combo_button:active
 {
-	border: 3px solid #000;
+	border: 3px solid ButtonText;
 	padding: 1px 1px 1px 2px;
 }
 
